@@ -35,6 +35,7 @@
 #define DEFAULT_MIN_MAX_WINDOW_HEIGHT   100
 #define DEFAULT_MAX_MAX_WINDOW_WIDTH  32767
 #define DEFAULT_MAX_MAX_WINDOW_HEIGHT 32767
+#define WINDOW_FREAKED_OUT_HEIGHT     65500
 
 #define DEFAULT_OPAQUE_MOVE_SIZE          5
 
